# CSH-Projector-lib

./: .gitignore  .gitmodules  Makefile  Makefile.in  README.pod  configure  configure.ac  postdep.mk
autom4te.cache/: output.1  traces.0  traces.1
docs/: lounge_projector.txt
include/: nec.h
src/: Makefile  Makefile.am  Makefile.in  main  main.c  nec.c  nec.h  postdep.mk  variables.mk
