AC_INIT([projector], [0.1], [worr@csh.rit.edu])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CHECK_FUNCS([socket memset])
AC_CHECK_HEADERS([arpa/inet.h netdb.h string.h sys/socket.h])
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
#AC_CONFIG_MACRO_DIR([m4])
AC_OUTPUT
